--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
 
 <div class="goods-section2">
 	<div class="section-header">
-		<h1>Body sprays</h1>
+		<h1>Perfumes</h1>
 	<p>some text about ptoduct</p></div>
 	
 <div class="four-row-flexbox">
 <div class="row">
 	<div class="row-image">
-		<img class="product-images" src="pure-black.jpg"></div>
+		<img class="product-images" src="Mosuf perfume.jpg"></div>
 		
 		<div class="row-body">
-			<h3 class="row-head-text">Pure black</h3>
+			<h3 class="row-head-text">Mosuf Perfumek</h3>
 			<p>Fragranced body spray <br>for men 200ml</p>
 			<h3 class="row-price-text">N1500</h3>
 			
@@ -116,9 +116,9 @@
 	</div>
 
 	<div class="row">
-		<img class="product-images1" src="hot-ice.jpg">
+		<img class="product-images1" src="Mosuf-set.jpg">
 		<div class="row-body">
-			<h3 class="row-head-text">Hot ice</h3>
+			<h3 class="row-head-text">Mosuf set</h3>
 			<p>Pour homme<br> Deodorant body spray</p>
 			<h3 class="row-price-text">N2000</h3>
 		</div>
