--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="row">
 				<img class="product-images" src="Bacarrat-rogue.jpg">
 				<div class="row-body">
-					<h3 class="row-head-text">Bacarrat rouge 540</h3>
+					<h3 class="row-head-text">Bacarrat rouge </h3>
 					<p>Perfumed body spray 200ml</p>
 					<h3 class="row-price-text">N2000</h3>
 				</div>
@@ -106,9 +106,9 @@
 		<img class="product-images" src="Mosuf perfume.jpg"></div>
 		
 		<div class="row-body">
-			<h3 class="row-head-text">Mosuf Perfumek</h3>
-			<p>Fragranced body spray <br>for men 200ml</p>
-			<h3 class="row-price-text">N1500</h3>
+			<h3 class="row-head-text">Mosuf Perfume</h3>
+			<p>Quallity perfume for quality taste</p>
+			<h3 class="row-price-text">N8500</h3>
 			
 		</div>
 	<div class="buy-now">
@@ -119,8 +119,8 @@
 		<img class="product-images1" src="Mosuf-set.jpg">
 		<div class="row-body">
 			<h3 class="row-head-text">Mosuf set</h3>
-			<p>Pour homme<br> Deodorant body spray</p>
-			<h3 class="row-price-text">N2000</h3>
+			<p>Full set of Mosuf perfumes</p>
+			<h3 class="row-price-text">N20000</h3>
 		</div>
 		<div class="buy-now">
 			<a href="https://wa.me/2348078559693?text=Im%intrested%In%this%product" id="buy-now">Buy</a></div></div>
@@ -128,7 +128,7 @@
 		<div class="row">
 			<img class="product-images" src="Bacarrat-rogue.jpg">
 			<div class="row-body">
-				<h3 class="row-head-text">Bacarrat rouge 540</h3>
+				<h3 class="row-head-text">Bacarrat rouge</h3>
 				<p>perfumed body spray 200ml</p>
 				<h3 class="row-price-text">N2000</h3>
 			</div>
@@ -180,7 +180,7 @@
 		<div class="row">
 			<img class="product-images" src="Bacarrat-rogue.jpg">
 			<div class="row-body">
-				<h3 class="row-head-text">Bacarrat rouge 540</h3>
+				<h3 class="row-head-text">Bacarrat rouge</h3>
 				<p>perfumed body spray 200ml</p>
 				<h3 class="row-price-text">N2000</h3>
 			</div>
