--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 	<h1 class="no-money-header">See something you like but dont have cash yet?<br>Dont worry we got you covered</h1>
 	<h3 class="no-money-text">Kindly fill this form so we can get in touch with you and send you updates</h3></div>
 	<div class="form">
-		<form action="form_processor.php" method="post" >
+		<form action="index1.html" method="post" >
 		<input class="email-field" type="text" name="name" required="required" placeholder="Your Full Name...">
 		<input class="email-field" type="number" name="Phone" required="required" placeholder="Your number...">
 		<input class="email-field" type="email" name="email" required="required" placeholder="Your email...">
