--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<img class="product-images" src="Bacarrat-rogue.jpg"></div>
 				<div class="row-body">
 					<h3 class="row-head-text">Bacarrat rouge </h3>
-					<p>Perfumed body spray 200ml</p>
+					<p>Perfumed body spray<br> 200ml</p>
 					<h3 class="row-price-text">N2000</h3>
 				</div>
 				<div class="buy-now">
@@ -141,7 +141,7 @@
 			<img class="product-images" src="Bacarrat-rogue.jpg"></div>
 			<div class="row-body">
 				<h3 class="row-head-text">Bacarrat rouge</h3>
-				<p>perfumed body spray 200ml</p>
+				<p>perfumed body spray<br>  200ml</p>
 				<h3 class="row-price-text">N2000</h3>
 			</div>
 			<div class="buy-now">
@@ -201,7 +201,7 @@
 			<img class="product-images" src="Bacarrat-rogue.jpg"></div>
 			<div class="row-body">
 				<h3 class="row-head-text">Bacarrat rouge</h3>
-				<p>perfumed body spray 200ml</p>
+				<p>perfumed body spray <br> 200ml</p>
 				<h3 class="row-price-text">N2000</h3>
 			</div>
 			<div class="buy-now">
@@ -231,7 +231,7 @@
 		<input class="email-field" type="text" name="name" required="required" placeholder="Your Full Name...">
 		<input class="email-field" type="number" name="Phone" required="required" placeholder="Your number...">
 		<input class="email-field" type="email" name="email" required="required" placeholder="Your email...">
-		<button type="submit" class="submit-button">Submit</button>
+		<button type="submit" class="submit-button" <a href="index1.html"></a> >Submit</button>
 	</div></form>
 </div>
 
