--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 				<h3 class="row-price-text">N2000</h3>
 			</div>
 			<div class="buy-now">
-				<a href="https://wa.me/2348078559693?text=Im%intrested%In%this%product" id="buy-now">Buy</a></div></div></div>
+				<a href="https://wa.me/2349036085649?text=Im%intrested%In%this%product" id="buy-now">Buy</a></div></div></div>
 
 
 				<div class="row">
@@ -231,7 +231,7 @@
 		<input class="email-field" type="text" name="name" required="required" placeholder="Your Full Name...">
 		<input class="email-field" type="number" name="Phone" required="required" placeholder="Your number...">
 		<input class="email-field" type="email" name="email" required="required" placeholder="Your email...">
-		<button type="submit" class="submit-button" <a href="index1.html"></a> >Submit</button>
+		<button type="submit" class="submit-button" >Submit</button>
 	</div></form>
 </div>
 
