--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
 <section>
 <div class="welcome-section">
 	<div class="welcome-texts">
-		<h2 class="welcome-text-header">LOCAL BUSINESS</h2>
-		<p class="welcome-text-body"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+		<h2 class="welcome-text-header">Perkyscent</h2>
+		<p class="welcome-text-body">
+		The right scent for each season,if u want to capture someone's attention and rediscover the art of seduction spray some perkyscent perfume.
+			Live a little,scent a little, immerse yourself in this beautiful fragrance world
+			We've got all your favorite scents in stock.We provide amazing customer service wherever, whenever possible.
+			</p>
 	<a href="#" class="start">LETS GO</a> 
 	</div>
 
