--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 	<div class="welcome-texts">
 		<h2 class="welcome-text-header">Perkyscent</h2>
 		<p class="welcome-text-body">
-		The right scent for each season,if u want to capture someone's attention and rediscover the art of seduction spray some perkyscent perfume.
-			Live a little,scent a little, immerse yourself in this beautiful fragrance world
-			We've got all your favorite scents in stock.We provide amazing customer service wherever, whenever possible.
+		The right scent for each season, if you want to capture someone's attention and rediscover the art of seduction spray some perkyscent perfume.
+			Live a little, scent a little, immerse yourself in this beautiful fragrance world.<br>
+			We've got all your favorite scents in stock.<br>
+			We provide amazing customer service wherever, whenever possible.
 			</p>
 	<a href="#" class="start">LETS GO</a> 
 	</div>
